--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,8 @@
         </ol>
 
         <h4>3. Deployment</h4>
-        <p>We push our code in Github and connect our in heroku
+        <p>We push our code in Github and Deploy
         </p> 
-        <img src="/static/images/content/deployment.svg" height="300" class="image-fluid" alt="">
 </div>
 
 
