--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
             <!-- items -->
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/">Home</a>
-                    <a class="nav-item nav-link" href="/app/">App</a>
+                    <a class="nav-item nav-link" href="/" style="color:white;">Home</a>
+                    <a class="nav-item nav-link" href="/app/" style="color:white;">App</a>
 
                 </div>
             </div>
