--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,9 @@
     <br><br>
     <h3 class="display-6"> Welcome to End to Face Recognition Web App Project</h3>
         <br>
+            
             <p>
-                This course explains you the end to end flow of Face Recognition. 
-                And this course can split into two parts.
-            </p>
-            <img src="/static/images/content/modules.svg" class="image-fluid" height="300" alt="">
-            <p>
-                In 1st module we majorly deals with training machine leanring model for face recognition. Whereas in second module 
+                we majorly deals with training machine leanring model for face recognition and 
                 we focus our journey towards develop web app (API) and integrate our machine learning model.
             </p>
         <br>
